<resources>
    <string name="app_name">TalkItOut</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_user_home_page">UserHomePage</string>
    <string name="enter_credentials">Enter Your Credentials</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone No.</string>
    <string name="date">D.O.B</string>
    <string name="submit">Submit</string>
    <string name="mail">info.talkitout@gmail.com</string>
    <string name="contact_us">Contact Us At:</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="error_inserting_data">This email is already registed.</string>

    <string name="action_settings">Settings</string>
</resources>
